--- a/android/OpenRegistration/app/src/main/res/values/strings.xml
+++ b/android/OpenRegistration/app/src/main/res/values/strings.xml
@@ -244,4 +244,7 @@
         <item>ZM,+260,70-123-4560</item>
         <item>ZW,+263,70-123-4560</item>
     </string-array>
+    <string name="title_activity_password_account">PasswordAccount</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
