Adding Create PasswordAccount raises Error 400:add.user.cleartrust.error:Could not add person to cleartrust.
Need to work on further screens.

--- a/android/OpenRegistration/app/src/main/res/values/strings.xml
+++ b/android/OpenRegistration/app/src/main/res/values/strings.xml
@@ -247,4 +247,5 @@
     <string name="title_activity_password_account">PasswordAccount</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_security_question">SecurityQuestionActivity</string>
 </resources>
