--- a/android/OpenRegistration/app/src/main/res/values/strings.xml
+++ b/android/OpenRegistration/app/src/main/res/values/strings.xml
@@ -248,4 +248,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_security_question">SecurityQuestionActivity</string>
+    <string name="title_activity_package_selection">PackageSelectionActivity</string>
+    <string name="title_activity_registration_completion">Registration Status</string>
 </resources>
